NetworkService: Destroy NetworkContexts on NetworkService teardown.

Also fix NetworkContexts potentially not being destroyed on connection
error / consumer teardown, due to calling str::move twice on the same
RequestPtr.

BUG=736472

Review-Url: https://codereview.chromium.org/2962693002
Cr-Commit-Position: refs/heads/master@{#482745}

Former-commit-id: cfbf85b0c37adf3acccead282bf5c9b794ba4009